--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=database
+DB_PORT=5432
+DB_DATABASE=test_db
+DB_USERNAME=test_usr
+DB_PASSWORD=test_pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -37,11 +37,12 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_ACCESS_KEY_ID=s3_test_usr
+AWS_SECRET_ACCESS_KEY=s3_test_pass
+AWS_DEFAULT_REGION=ru-central1
+AWS_BUCKET=test
+AWS_USE_PATH_STYLE_ENDPOINT=true
+AWS_ENDPOINT=http://storage:9000
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
