--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,8 +11,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.13",
+        "nuwave/lighthouse": "^6.8",
         "spatie/laravel-data": "^3.4",
-        "spatie/laravel-medialibrary": "^10.8"
+        "spatie/laravel-medialibrary": "^10.8",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
